# blockito

./: .gitignore  Cargo.toml  README.md  bacon.toml  example-swap-config.yaml  test.txt
src/: consts.rs  main.rs
src/db/: database.rs
src/http/: bother.rs  conversations.rs  error.rs  health.rs  mod.rs
src/model/: bother.rs  conversation.rs  message.rs  mod.rs
src/vector/: embedding.rs
